@@ -9,6 +9,9 @@ import org.springframework.boot.autoconfigure.SpringBootApplication;
 @SpringBootApplication
 public class Application {
 
+    /**
+     * -Xmx256M -Xms256M -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:F:/temp/jvm/gc_%t.log -XX:+UseConcMarkSweepGC -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=F:/temp/jvm/heap_%t.hprof
+     */
     public static void main(String[] args) {
         SpringApplication.run(Application.class, args);
     }
